Fixes team on mobile

--- a/docs/_sass/minima/custom-styles.scss
+++ b/docs/_sass/minima/custom-styles.scss
@@ -1,8 +1,2 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
-
-.youtube-video {
-    aspect-ratio: 16 / 9;  
-    width: 100%;  
-    height: auto;  
-}
