--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -37,3 +37,13 @@ img.aidx {
   margin-top: 0px;
   margin-bottom: 50px;
 }
+
+.youtube-video {
+    aspect-ratio: 16 / 9;  
+    width: 100%;  
+    height: auto;  
+}
+
+.member-details {
+  display: inline-block;
+}
